Fixed (hopefully) unresponsive font sizes leading to 'sidebar' on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -541,7 +541,7 @@ p.capitalize:first-letter {
 	color: #4285f4;
 	font-weight: 700;
 	margin-bottom: 50px;
-	font-size:90px;
+	font-size:85px;
 }
 
 #cta03 h2 {
@@ -586,7 +586,7 @@ p.capitalize:first-letter {
 	color: #4285f4;
 	font-weight: 700;
 	margin-bottom: 50px;
-	font-size:90px;
+	font-size: 7vw;
 }
 
 #cta04 h2 {
